<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".User.UserDashboard">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/profileIcon"
            android:src="@drawable/user_profile_circle" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/roboto"
                    android:paddingStart="10dp"
                    android:paddingEnd="80dp"
                    android:text="@string/findYourVibe"
                    android:textSize="24sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/coffeeTypes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/coffeeTypes" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/coffeeTypes"
                    android:padding="20dp"
                    android:clipToPadding="false">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="25dp"
                        app:cardElevation="10dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp">

                            <ImageView
                                android:id="@+id/coffeeImageview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:src="@drawable/boba1" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto"
                                android:paddingTop="10dp"
                                android:text="@string/avacadoBoba"
                                android:textSize="14sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto"
                                android:text="@string/withOatMilk"
                                android:textSize="12sp" />

                            <RelativeLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="10dp">


                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentStart="true"
                                    android:layout_centerVertical="true"
                                    android:src="@drawable/dollar_coin" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:paddingStart="20dp"
                                    android:paddingEnd="20dp"
                                    android:text="@string/val5_99" />

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentEnd="true"
                                    android:layout_centerVertical="true"
                                    android:padding="5dp"
                                    android:src="@drawable/add_circle" />


                            </RelativeLayout>


                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="25dp"
                        app:cardElevation="10dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp">

                            <ImageView
                                android:id="@+id/coffeeImageviewRight"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:src="@drawable/mangoboba_1__1_" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto"
                                android:paddingTop="10dp"
                                android:text="@string/mangoBoba"
                                android:textSize="14sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto"
                                android:text="@string/withOatMilk"
                                android:textSize="12sp" />

                            <RelativeLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="10dp">


                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentStart="true"
                                    android:layout_centerVertical="true"
                                    android:src="@drawable/dollar_coin" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:paddingStart="20dp"
                                    android:paddingEnd="20dp"
                                    android:text="@string/val5_99" />

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentEnd="true"
                                    android:layout_centerVertical="true"
                                    android:padding="5dp"
                                    android:src="@drawable/add_circle" />


                            </RelativeLayout>


                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/roboto"
                    android:paddingStart="10dp"
                    android:paddingEnd="80dp"
                    android:text="@string/specialPicks"
                    android:textSize="24sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:clipToPadding="false">


                <androidx.cardview.widget.CardView
                    android:backgroundTint="@color/mainbrown"
                    app:cardElevation="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="20dp">

                        <ImageView
                            android:id="@+id/specialCoffeeImageview"
                            android:layout_width="165dp"
                            android:layout_height="125dp"
                            android:layout_gravity="center"
                            android:src="@drawable/cofeecup1_1" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:paddingStart="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto"
                                android:paddingTop="10dp"
                                android:text="@string/specialPickTagLine"
                                android:textColor="@color/white"
                                android:textSize="14sp" />

                            <LinearLayout
                                android:paddingTop="20dp"
                                android:gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/dollar_coin_black" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingStart="10dp"
                                    android:paddingEnd="20dp"
                                    android:text="@string/val5_99"
                                    android:textColor="@color/white" />

                            </LinearLayout>

                            <RelativeLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                                <ImageView
                                    android:layout_width="24dp"
                                    android:layout_height="24dp"
                                    android:layout_alignParentEnd="true"
                                    android:layout_alignParentBottom="true"
                                    android:src="@drawable/add_circle" />

                            </RelativeLayout>




                        </LinearLayout>
                    </LinearLayout>


                </androidx.cardview.widget.CardView>










            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:clipToPadding="false">
                <androidx.cardview.widget.CardView
                    android:backgroundTint="@color/mainpink"
                    app:cardCornerRadius="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="85dp">

                    <LinearLayout
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:padding="10dp"
                            android:fontFamily="@font/roboto"
                            android:textSize="20sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/explore_exclusive_offers"/>
                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/tallcofeecup"/>
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/discount_star_03"/>


                    </LinearLayout>


                </androidx.cardview.widget.CardView>
            </RelativeLayout>


        </LinearLayout>




    </ScrollView>







</LinearLayout>